gcc/testsuite/rust/rustc/ui/issues/issue-17373.rs
fn main() {
    *return // { dg-error ".E0614." "" { target *-*-* } }
    ;
}

